# investigating-ablation

./: .gitignore  distributions.ipynb  opt_rand_replacement.py  peak_compare.ipynb  peak_scoring.ipynb  prune.py  prune.sh  pyproject.toml  roberta_rand_replacement.py  vit_rand_replacement.py
ben/: ben_prune.py  prune.py  prune.sh  prune_30.py
ben/wandb/: latest-run
ben/wandb/run-20240227_185001-su21jvv5/: run-su21jvv5.wandb
ben/wandb/run-20240227_185033-1d8rm3uj/: run-1d8rm3uj.wandb
ben/wandb/run-20240227_185103-sgs9t9tc/: run-sgs9t9tc.wandb
ben/wandb/run-20240228_170004-kaagt5wq/: run-kaagt5wq.wandb
ben/wandb/run-20240310_233752-jsbkzawe/: run-jsbkzawe.wandb
ben/wandb/run-20240312_202819-468n5m2q/: run-468n5m2q.wandb
ben/wandb/run-20240312_203938-qtdp31m1/: run-qtdp31m1.wandb
ben/wandb/run-20240312_204744-pu7wz5uo/: run-pu7wz5uo.wandb
ben/wandb/run-20240312_205021-q35k6eu5/: run-q35k6eu5.wandb
ben/wandb/run-20240312_205728-c9weqqwr/: run-c9weqqwr.wandb
ben/wandb/run-20240312_215924-dch10p06/: run-dch10p06.wandb
ben/wandb/run-20240312_222546-659ewdjs/: run-659ewdjs.wandb
ben/wandb/run-20240312_223134-um8h0lfx/: run-um8h0lfx.wandb
ben/wandb/run-20240312_223449-murouhet/: run-murouhet.wandb
ben/wandb/run-20240312_224042-z3e2523s/: run-z3e2523s.wandb
ben/wandb/run-20240312_232601-facyz7o1/: run-facyz7o1.wandb
ben/wandb/run-20240312_233350-yjvzys90/: run-yjvzys90.wandb
ben/wandb/run-20240312_233545-8fw19rnk/: run-8fw19rnk.wandb
rand_replacement/: rand_inputs.py  vit_rand_replacement.py
(+124 files in other folders)
