[tool.poetry]
name = "aisc-peak-trajectories"
version = "0.0.1"
description = "Pruning via Peak Activation Offsetting"
authors = ["Nicky Pochinkov"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
repository = "https://github.com/nickypro/taker"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
taker = ">=0.9.12"
torchmetrics = "^1.3.1"
lightning = "^2.2.0.post0"
lazypredict = "^0.2.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
mypy = "^0.991"
autopep8 = "^2.0.1"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
ansible = "^8.4.0"
bokeh = "3.0.*,>=2.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
